--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,22 @@
-body {
-    background-color:green;
-    color: white;
+*{
+    margin: 0;
+    padding: 0;
+    font-family:'Poppins', sans-serif;
+    box-sizing:border-box;
 }
 
 
-h1 {text-align: center;}
-p {text-align: center;}
-div {text-align: center;}
 
+body {
+    background: #080808
+    color #fff;
+}
+
+
+#header{
+    width: 100%;
+    height: 100vh;
+    background-image: url(images/website.png);
+    background-size: cover;
+    background-position: center;
+}
