--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ nav ul li a::after{
     content: '';
     width: 0%;
     height: 3px; 
-    background: #ff004f;
+    background: #2f72be;
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -73,7 +73,7 @@ nav ul li a:hover::after{
     margin-top: 20px; 
 }
 .header-text h1 span{
-    color: #ff004f
+    color: #2f72be
 }
 /*--------------about------- */
 #about{
@@ -119,7 +119,7 @@ nav ul li a:hover::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #2f72be;
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -136,7 +136,7 @@ nav ul li a:hover::after{
     margin: 10px 0;
 }
 .tab-contents ul li span{
-    color: #b54769;
+    color: #2f72be;
     font-size: 14px;
 }
 
@@ -183,7 +183,7 @@ nav ul li a:hover::after{
     display: inline-block;
 }
 .services-list div:hover{
-    background: red;
+    background: #2f72be;
     transform: translateY(-10px);
 
 }
@@ -212,7 +212,7 @@ nav ul li a:hover::after{
 .layer{
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0,0,0,0.6), #ff004f);
+    background: linear-gradient(rgba(0,0,0,0.6), #2f72be);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -233,7 +233,7 @@ nav ul li a:hover::after{
 }
 .layer a{
     margin-top: 20px;
-    color: #ff004f;
+    color: #2f72be;
     text-decoration: 18px;
     font-size: 18px;
     line-height: 60px;
@@ -254,7 +254,7 @@ nav ul li a:hover::after{
     display: block;
     margin: 50px auto;
     width: fit-content;
-    border: 1px solid #ff004f;
+    border: 1px solid #2f72be;
     padding: 14px 50px;
     border-radius: 6px;
     text-decoration: none;
@@ -262,7 +262,7 @@ nav ul li a:hover::after{
     transition: background 0.5s;
 }
 .btn:hover{
-    background: #ff004f;
+    background: #2f72be;
 }
 
 /*----------------contact----------*/
@@ -276,7 +276,7 @@ nav ul li a:hover::after{
     margin-top: 30px;
 }
 .contact-left p i{
-    color: #ff004f;
+    color: #2f72be;
     margin-right: 15px;
     font-size: 25px;
 }
@@ -293,12 +293,12 @@ nav ul li a:hover::after{
 }
 
 .social-icons a:hover{
-    color: #ff004f;
+    color: #2f72be;
     transform: translateY(-5px);
 } 
 .btn.btn2{
     display: inline-block;
-    background: #ff004f;
+    background: #2f72be;
 }
 .contact-right form{
     width: 100%;
